MAP-2083 Remove cell with capacity endpoint and general tidy up of unused repo functions and warnings (#2332)
* MAP-2083 Remove cell with capacity endpoint and general tidy up of unused repo functions and warnings

* MAP-2083 Remove entity graph

* MAP-2083 remove test